// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article Flag renders Exclusive flag correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#C51D24",
      "fontFamily": "TimesDigital-RegularSC",
      "fontSize": 10,
      "fontWeight": "400",
      "letterSpacing": 1,
      "lineHeight": 20,
    }
  }
>
  <svg
    height={7}
    style={Object {}}
    viewBox="0 0 20 20"
    width={7}
  >
    <g
      fill="#C51D24"
      style={Object {}}
    >
      <path
        d="M 0,10 10,20 20,10 10,0 Z"
        style={Object {}}
      />
    </g>
  </svg>
   
  EXCLUSIVE
</Text>
`;

exports[`Article Flag renders New flag correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#E34605",
      "fontFamily": "TimesDigital-RegularSC",
      "fontSize": 10,
      "fontWeight": "400",
      "letterSpacing": 1,
      "lineHeight": 20,
    }
  }
>
  <svg
    height={7}
    style={Object {}}
    viewBox="0 0 20 20"
    width={7}
  >
    <g
      fill="#E34605"
      style={Object {}}
    >
      <path
        d="M 0,10 10,20 20,10 10,0 Z"
        style={Object {}}
      />
    </g>
  </svg>
   
  NEW
</Text>
`;

exports[`Article Flag renders Sponsored flag correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#4D4D4D",
      "fontFamily": "TimesDigital-RegularSC",
      "fontSize": 10,
      "fontWeight": "400",
      "letterSpacing": 1,
      "lineHeight": 20,
    }
  }
>
  <svg
    height={7}
    style={Object {}}
    viewBox="0 0 20 20"
    width={7}
  >
    <g
      fill="#4D4D4D"
      style={Object {}}
    >
      <path
        d="M 0,10 10,20 20,10 10,0 Z"
        style={Object {}}
      />
    </g>
  </svg>
   
  SPONSORED
</Text>
`;

exports[`Article Flag renders Updated flag correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#3C81BE",
      "fontFamily": "TimesDigital-RegularSC",
      "fontSize": 10,
      "fontWeight": "400",
      "letterSpacing": 1,
      "lineHeight": 20,
    }
  }
>
  <svg
    height={7}
    style={Object {}}
    viewBox="0 0 20 20"
    width={7}
  >
    <g
      fill="#3C81BE"
      style={Object {}}
    >
      <path
        d="M 0,10 10,20 20,10 10,0 Z"
        style={Object {}}
      />
    </g>
  </svg>
   
  UPDATED
</Text>
`;

exports[`Article Flag renders correctly 1`] = `null`;
